build: copy database data to dist directory and remove api path rewrite
The database data needs to be available in the production build. The API path rewrite was removed as it's no longer needed with the current backend routing setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -54,6 +54,7 @@ RUN pnpm install --frozen-lockfile --prod --ignore-scripts
 
 # Copy built files and public assets
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/src/database/data ./dist/database/data
 COPY public ./public
 
 # Expose port
