--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,6 +23,16 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # Proxy Swagger docs to backend
+    location /api-docs/ {
+        proxy_pass http://backend:8000/api-docs/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
