ci(docker): update compose files with environment vars and remove version
Add required environment variables for backend services in all docker-compose files
Remove deprecated version field from compose files

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build:
@@ -10,6 +8,11 @@ services:
         limits:
           cpus: "1"
           memory: 1G
+    environment:
+      - NODE_ENV=production
+      # Ensure these match your server's actual URL/IP
+      - FRONTEND_URL=http://72.62.161.70
+      - CORS_ORIGIN=http://72.62.161.70
 
   frontend:
     build:
