--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -9,6 +7,10 @@ services:
       - /app/node_modules
     ports:
       - "8000:8000"
+    environment:
+      - NODE_ENV=development
+      - FRONTEND_URL=http://localhost:5173
+      - CORS_ORIGIN=http://localhost:5173
     command: pnpm dev
 
   frontend:
