--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   # ---------------------------------------------------------------------------
   # Database: PostgreSQL
@@ -47,7 +45,7 @@ services:
       context: ./backend
     container_name: bkeep_backend
     environment:
-      - NODE_ENV=${NODE_ENV:-development}
+      - NODE_ENV=${NODE_ENV:-production}
       - HOST=0.0.0.0
       - PORT=8000
       - DB_HOST=postgres
@@ -57,6 +55,8 @@ services:
       - DB_NAME=${DB_NAME:-myapp_test}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost}
     depends_on:
       postgres:
         condition: service_healthy
