--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,42 +1,18 @@
-# syntax=docker/dockerfile:1.7
-
-# -----------------------------------------------------------------------------
-# Base Stage
-# -----------------------------------------------------------------------------
-FROM node:20-alpine AS base
+FROM node:22-alpine AS builder
 WORKDIR /app
-
-# -----------------------------------------------------------------------------
-# Dependencies Stage
-# -----------------------------------------------------------------------------
-FROM base AS deps
-COPY package.json package-lock.json* ./
+COPY package.json package-lock.json ./
 RUN npm ci
-
-# -----------------------------------------------------------------------------
-# Development Stage
-# -----------------------------------------------------------------------------
-FROM base AS dev
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host"]
-
-# -----------------------------------------------------------------------------
-# Builder Stage
-# -----------------------------------------------------------------------------
-FROM base AS builder
 ARG VITE_API_ENDPOINT
-ENV VITE_API_ENDPOINT=$VITE_API_ENDPOINT
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
+ARG VITE_ENVIRONMENT
+ENV VITE_API_ENDPOINT=${VITE_API_ENDPOINT}
+ENV VITE_ENVIRONMENT=${VITE_ENVIRONMENT}
 RUN npm run build
 
-# -----------------------------------------------------------------------------
-# Production Stage
-# -----------------------------------------------------------------------------
-FROM nginx:alpine AS prod
-COPY --from=builder /app/dist /usr/share/nginx/html
+FROM nginx:alpine AS runner
+WORKDIR /usr/share/nginx/html
+COPY --from=builder /app/dist ./
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx","-g","daemon off;"]
+
