fix(security): update helmet middleware CSP and CORS policies
- Add allowed connect sources including frontend URL and local server
- Enable cross-origin resource policy
- Standardize string quotes usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       HOST: 0.0.0.0
       PORT: 8000
       API_PREFIX: /api/v1
-      CORS_ORIGIN: http://72.62.161.70
+      CORS_ORIGIN: http://72.62.161.70,http://72.62.161.70:80,http://72.62.161.70:8000
       FRONTEND_URL: http://72.62.161.70
       DB_HOST: postgres
       DB_PORT: 5432
